--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
   <script src="assets/json2s.js"></script>
   <script src="assets/jquery.js"></script>
+  <script src="assets/jquery-ui.js"></script>
   <script src="assets/underscore.js"></script>
   <script src="assets/backbone.js"></script>
   <script src="assets/backbone.localStorage.js"></script>
